Fix the rendering of files with whitespace and hyphens

--- a/src/running/index.css
+++ b/src/running/index.css
@@ -140,6 +140,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   direction: rtl;
+  white-space: nowrap;
 }
 
 .jp-RunningSessions-itemShutdown {
